# leave-portal

./: .electron-builderignore  .gitignore  2FA-REMOVAL-SUMMARY.md  API-ROUTES-IMPLEMENTATION-COMPLETE.md  API-URL-VERCEL-COMPLIANCE-CHECK.md  API_ROUTES_MIGRATION_SUMMARY.md  AUDIT-FIXES-IMPLEMENTED.md  AUDIT-REPORT-IMPLEMENTATION-STATUS.md  AUDIT-REPORT-SUMMARY.md  AUDIT_IMPLEMENTATION_SUMMARY.md  AUTHENTICATION-DEBUG-GUIDE.md  AUTHENTICATION_SECURITY_AUDIT.md  BUILD-ANALYSIS.md  BUILD-FIXES-APPLIED.md  BUILD-INSTRUCTIONS.md  BUILD-WINDOWS-EXE.md  BUTTON_LEVEL_RBAC_AUDIT.md  CALENDAR-AVAILABILITY-QUICK-REFERENCE.md  CARRY-FORWARD-COMPLIANCE-ANALYSIS.md  CARRY-FORWARD-IMPLEMENTATION-COMPLETE.md  CODEBASE-CONSISTENCY-AUDIT-REPORT.md  CODEBASE-CONSISTENCY-CHECK.md  COMPLETE_REFACTORING_STATUS.md  COMPLIANCE-FEATURES-IMPLEMENTATION-COMPLETE.md  COMPLIANCE-IMPLEMENTATION-COMPLETE.md  COMPLIANCE-ISSUES-FIXED.md  COMPREHENSIVE-AUDIT-REPORT.md  DATABASE-USAGE-AUDIT-REPORT.md  DATABASE-USAGE-SUMMARY.md  DEPLOYMENT-FIXES-APPLIED.md  DEPLOYMENT-READINESS-AUDIT.md  DEPLOYMENT-STATUS.md  DEPLOYMENT.md  DEPRECATION-WARNINGS.md  DESKTOP-APP-BUILD-GUIDE.md  DESKTOP-APP-COMPLETE.md  DESKTOP-APP-CONVERSION-GUIDE.md  DESKTOP-APP-FEATURES-COMPLETE.md  DESKTOP-APP-FEATURES-STATUS.md  DESKTOP-APP-READY.md  (+180 more)
.next/: app-build-manifest.json  build-manifest.json  prerender-manifest.json  trace  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: database.rs  main.rs
src-tauri/src/commands/: api.rs  filesystem.rs  mod.rs  offline.rs  repository.rs
(+800 files in other folders)
